--- a/order-service.properties
+++ b/order-service.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/order-service
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
